crates/wac-parser/tests/resolution/fail/mismatched-flags.wac
package test:comp;

import x: interface {
    flags f {
        a,
        c,
        b,
    }
};

let i = new foo:bar { x };
